--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6,11 +6,11 @@ body {
 }
 
 #app {
-  margin: 20px;
+  margin: 20px 5px 20px 0px;
   padding: 20px;
   background-color: #fff;
   border-radius: 5px;
-  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1);
 }
 
 .notes-container,
@@ -20,39 +20,36 @@ body {
 
 table {
   width: 100%;
-  border-collapse: collapse;
   margin-top: 10px;
-  border: 1px solid #808080;
-  border-radius: 4px;
 }
 
-table,
 th,
 td {
-  border: 1px solid #ccc;
+  border: 1px solid #9f9f9f;
 }
 
 th,
 td {
   padding: 10px;
-  text-align: left;
 }
 
 th {
-  background-color: #f0f0f0;
-  font-weight: bold;
+    background-color: #808080;
+    color: white;
+    padding: 8px;
 }
 
-thead {
-  border-bottom: 2px solid #ccc;
-  margin-bottom: 40px;
-}
-
-tbody {
-  margin-top: 10px; /* Add margin between thead and tbody */
+.notes-thead {
+  position: static;
+  width: 100px;
 }
 
 .btn-container {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.notes-list-btn {
   display: flex;
   justify-content: flex-end;
 }
@@ -92,37 +89,30 @@ tr:hover {
   background-color: #f0f0f0;
 }
 
-/* Style for buttons in the table cells */
 td button {
   margin-right: 5px;
 }
 
-/* Style for the "Archive" button */
 td .archive-btn {
   background-color: #e74c3c;
 }
 
-/* Style for the "Archive" button on hover */
 td .archive-btn:hover {
   background-color: #c0392b;
 }
 
-/* Style for the "Edit" button */
 td .edit-btn {
   background-color: #27ae60;
 }
 
-/* Style for the "Edit" button on hover */
 td .edit-btn:hover {
   background-color: #21965d;
 }
 
-/* Style for the "Remove" button */
 td .remove-btn {
   background-color: #e67e22;
 }
 
-/* Style for the "Remove" button on hover */
 td .remove-btn:hover {
   background-color: #ca6b12;
 }
