--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,127 +1,25 @@
 body {
   font-family: Arial, sans-serif;
   margin: 0;
-  padding: 0;
+  padding: 50px;
   background-color: #f0f0f0;
 }
 
 #app {
-  margin: 20px 5px 20px 0px;
+  margin: 20px;
   padding: 20px;
   background-color: #fff;
   border-radius: 5px;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1);
-}
-
-.notes-container,
-.notes-summary {
-  flex-basis: 48%;
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
 }
 
 table {
   width: 100%;
+  border-collapse: collapse;
   margin-top: 10px;
+  border: 1px solid #808080;
+  border-radius: 20px;
 }
-
-th,
-td {
-  border: 1px solid #9f9f9f;
-}
-
-th,
-td {
-  padding: 10px;
-}
-
-th {
-    background-color: #808080;
-    color: white;
-    padding: 8px;
-}
-
-.notes-thead {
-  position: static;
-  width: 100px;
-}
-
-.btn-container {
-  display: flex;
-  justify-content: flex-end;
-}
-
-.notes-list-btn {
-  display: flex;
-  justify-content: flex-end;
-}
-
-.delete-btn {
-  margin-left: 5%;
-}
-
-button {
-  padding: 5px 10px;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  background-color: #3498db;
-  color: white;
-}
-
-button:hover {
-  background-color: #2980b9;
-}
-
-button.archive-btn {
-  background-color: #e74c3c;
-}
-
-button.archive-btn:hover {
-  background-color: #c0392b;
-}
-
-h1,
-h2 {
-  margin-bottom: 10px;
-}
-
-/* Style for table rows */
-tr:hover {
-  background-color: #f0f0f0;
-}
-
-td button {
-  margin-right: 5px;
-}
-
-td .archive-btn {
-  background-color: #e74c3c;
-}
-
-td .archive-btn:hover {
-  background-color: #c0392b;
-}
-
-td .edit-btn {
-  background-color: #27ae60;
-}
-
-td .edit-btn:hover {
-  background-color: #21965d;
-}
-
-td .remove-btn {
-  background-color: #e67e22;
-}
-
-td .remove-btn:hover {
-  background-color: #ca6b12;
-}
-
-.notes-summary {
-  margin-top: 80px;
-}
-
-
 
 /* create-note block */
 
@@ -146,11 +44,6 @@ td .remove-btn:hover {
   transition: 1s;
 }
 
-#noteForm {
-  text-align: center;
-}
-
-#noteForm input,
-#noteForm select {
-  margin: 5px;
+.btn {
+  margin-top: 20px;
 }
